--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div class="main">
-      <header>
+      <div class="header">
         <div class="logo">
           <img src="./resources/images/ic-logo.svg" alt="logo contains image of lion">
-          <span><em>COLMAR</em>ACADEMY</span>
+          <span>COLMAR<em>ACADEMY</em></span>
         </div>
         <nav>
           <span>On campus</span>
@@ -19,7 +19,7 @@
           <span>For companies</span>
           <span>Sign in</span>
         </nav>
-      </header>
+      </div>
       <!--First block with image and Start Button -->
       <div class="first container">
         <div class="sixtyPercentBlock">
@@ -27,39 +27,26 @@
         </div>
         <div class="fortyPercentBlock">
           <div class="mainBanner">
-
+            <h1>Learn something new every day</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+            <div class="button">Start here</div>
           </div>
-          <h1>Learn something new every day</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-          <div class="button">Start here</div>
         </div>
-      </div>
-    </div>
-  </body>
-</html>
-      <!--
-      Second Container Image and Classes Info
+      </div><!--First Container ends here -->
       <div class="second container">
-        <div class="sixtyPrcentBlock">
-          <img class="students" src="./resources/images/information-main.jpg" alt="photo of smiling student with book">
-        </div>
-        <div class="fortyPercentBlock">
-
-        </div>
-      </div>
-
-
-        <div class="cleverness">
+        <div class="sixtyPercentBlock sixtyPercentTwo">
+          <img class="imageBlock" src="./resources/images/information-main.jpg" alt="">
+          <div class="cleverness">
             <h2>It doesn't hurt to keep practicing</h2>
             <p>"Curabitur vitae liberto in ipsum porttitor consequat.
-               Aliquam et commodo lectus, nec consequat neque.
-               Sed non accumsan urna. Phasellus sed consequat ex.
-               Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."
+                 Aliquam et commodo lectus, nec consequat neque.
+                 Sed non accumsan urna. Phasellus sed consequat ex.
+                 Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."
             </p>
             <p><em>Emanuel, Sr Strategist at Hiring.com</em></p>
           </div>
         </div>
-        <div class="secContInfo">
+        <div class="fortyPercentBlock">
           <div class="classesBlock orientation">
             <img class="desktopImg" src="./resources/images/information-orientation.jpg" alt="">
             <img class="mobileImg" src="./resources/images/information-orientation-mobile.jpg" alt="">
@@ -87,4 +74,108 @@
               <a href="#">Read more</a>
             </div>
           </div>
-      </div>   -->
+        </div>
+      </div>
+      <!--Third Container starts Here -->
+      <div class="third container">
+        <h2>Start lerning</h2>
+        <div class="learning container">
+          <div class="learningBlock">
+            <img src="./resources/images/course-software.jpg" alt="">
+            <div class="learningInfo">
+              <h3>Software engineering</h3>
+              <p>COURSES</p>
+              <p>Web Developement, Mobile Developement, iOT, APIs</p>
+            </div>
+          </div>
+          <div class="learningBlock">
+            <img src="./resources/images/course-computer-art.jpg" alt="">
+            <div class="learningInfo">
+              <h3>Computer art</h3>
+              <p>COURSES</p>
+              <p>Imaging & Design, Web Design, Motion Graphics & Visual effects</p>
+            </div>
+          </div>
+          <div class="learningBlock">
+            <img src="./resources/images/course-design.jpg" alt="">
+            <div class="learningInfo">
+              <h3>Design</h3>
+              <p>COURSES</p>
+              <p>User expirience design, User Reserch, Visual Design</p>
+            </div>
+          </div>
+        </div>
+        <div class="learning container">
+          <div class="learningBlock">
+            <img src="./resources/images/course-data.jpg" alt="">
+            <div class="learningInfo">
+              <h3>Data</h3>
+              <p>COURSES</p>
+              <p>Data science, Big Data, SQL, Data Visualisation</p>
+            </div>
+          </div>
+          <div class="learningBlock">
+            <img src="./resources/images/course-business.jpg" alt="">
+            <div class="learningInfo">
+              <h3>Business</h3>
+              <p>COURSES</p>
+              <p>Web Developement, Mobile Developement, iOT, APIs</p>
+            </div>
+          </div>
+          <div class="learningBlock">
+            <img src="./resources/images/course-marketing.jpg" alt="">
+            <div class="learningInfo">
+              <h3>Marketing</h3>
+              <p>COURSES</p>
+              <p>Web Developement, Mobile Developement, iOT, APIs</p>
+            </div>
+          </div>
+        </div>
+      </div> <!--Third container Ends Here -->
+      <div class="thesis container">
+        <h2>Thesis exhibit</h2>
+      </div>
+      <!--Forth container starts here -->
+      <div class="forth container">
+        <div class="sixtyPercentBlock withVideo">
+          <video autoplay muted loop>
+            <source src="./resources/videos/thesis.mp4" type="video/mp4">
+          </video>
+          <div class="cleverness underVideo">
+            <h3>Reimagine urban</h2>
+            <p>"Curabitur vitae libero in ipsum porttitor consequat.
+              Aliquam et commodo lectus, nec consequat neque.Sed non accumsan urna.
+              Pasellus sed consequat ex. Etiam eget magna laoreet,
+               effectur dolor consequat, tristique ligula."
+            </p>
+          </div>
+        </div>
+        <div class="fortyPercentBlock">
+          <div class="classesBlock fisma">
+            <img class="desktopImg" src="./resources/images/thesis-fisma.jpg" alt="">
+            <div class="classesInfo">
+              <h3>Fisma: Design and Prototype</h3>
+              <p>Designer showcase of new prototype product</p>
+            </div>
+          </div>
+          <div class="classesBlock">
+            <img class="desktopImg" src="./resources/images/thesis-now-and-then.jpg" alt="">
+            <div class="classesInfo">
+              <h3>Now and then</h3>
+              <p>Reserch stydy about New York</p>
+            </div>
+          </div>
+        </div>
+      </div><!--Forth container ends here -->
+      <footer>
+        <div class="copyright">
+          <span>© 2016 Colmar Academy. All rights reserved</span>
+        </div>
+        <nav>
+          <span>Terms</span>
+          <span>Privacy</span>
+        </nav>
+      </footer>
+    </div><!-- class Main div finished here -->
+  </body>
+</html>
