Add favicon to project

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Colmar Academy</title>
+    <link rel="icon" href="./resources/images/logo_lion.ico" type="image/x-icon">
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
@@ -10,7 +11,7 @@
     <div class="main">
       <div class="header">
         <div class="logo">
-          <img src="./resources/images/ic-logo.svg" alt="logo contains image of lion">
+          <a href="#"><img href="#" src="./resources/images/ic-logo.svg" alt="logo contains image of lion"></a>
           <span>COLMAR<em>ACADEMY</em></span>
         </div>
         <nav>
