Add Font Awesome Icons and Transition to Button

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Colmar Academy</title>
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css">
     <link rel="icon" href="./resources/images/logo_lion.ico" type="image/x-icon">
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
@@ -203,9 +204,12 @@
         <div class="copyright">
           <span>© 2016 Colmar Academy. All rights reserved</span>
         </div>
-        <nav class="desktop">
-          <span>Terms</span>
-          <span>Privacy</span>
+        <nav>
+          <span class="desktop">Terms</span>
+          <span class="desktop">Privacy</span>
+          <span><i class="fa fa-facebook"></i></span>
+          <span><i class="fa fa-twitter"></i></span>
+          <span><i class="fa fa-pinterest-square"></i></span>
         </nav>
       </footer>
     </div><!-- class Main div finished here -->
