--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
       <!--First block with image and Start Button -->
       <div class="first container">
         <div class="sixtyPercentBlock">
-          <img class="imageBlock" src="./resources/images/banner.jpg" alt="Student gurls reading books">
+          <img class="imageBlock" src="./resources/images/banner.jpg" alt=" Mainbanner image ofStudent gurls reading books">
         </div>
         <div class="fortyPercentBlock">
-          <div class="mainBanner">
+          <div class="mainBanner" role="banner">
             <h1>Learn something new every day</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-            <div class="button">Start here</div>
+            <div class="button" role="button">Start here</div>
           </div>
         </div>
       </div><!--First Container ends here -->
@@ -48,8 +48,8 @@
       <!-- Second container -->
       <div class="second container">
         <div class="sixtyPercentBlock">
-          <img class="imageBlock" src="./resources/images/information-main.jpg" alt="">
-          <div class="cleverness">
+          <img class="imageBlock" src="./resources/images/information-main.jpg" alt="Image of happy and smiling student reading a book">
+          <div class="cleverness" role="complementary">
             <h2>It doesn't hurt to keep practicing</h2>
             <p>"Curabitur vitae liberto in ipsum porttitor consequat.
                  Aliquam et commodo lectus, nec consequat neque.
@@ -59,10 +59,10 @@
             <p><em>Emanuel, Sr Strategist at Hiring.com</em></p>
           </div>
         </div>
-        <div class="fortyPercentBlock">
+        <div class="fortyPercentBlock" role="note">
           <div class="classesBlock orientation">
-            <img class="desktop" src="./resources/images/information-orientation.jpg" alt="">
-            <img class="mobile" src="./resources/images/information-orientation-mobile.jpg" alt="">
+            <img class="desktop" src="./resources/images/information-orientation.jpg" alt="image of road to campus">
+            <img class="mobile" src="./resources/images/information-orientation-mobile.jpg" alt="image of road to campus">
             <div class="classesInfo">
               <h3>Orientation date</h3>
               <p>Tue 10/11 & Wed 10/12 8am-3pm</p>
@@ -70,8 +70,8 @@
             </div>
           </div>
           <div class="classesBlock campus">
-            <img class="desktop" src="./resources/images/information-campus.jpg" alt="">
-            <img class="mobile" src="./resources/images/information-campus-mobile.jpg" alt="">
+            <img class="desktop" src="./resources/images/information-campus.jpg" alt="image of learning auditorium">
+            <img class="mobile" src="./resources/images/information-campus-mobile.jpg" alt="image of learning auditorium">
             <div class="classesInfo">
               <h3>Our campus</h3>
               <p>Find wich campus is close by you</p>
@@ -79,8 +79,8 @@
             </div>
           </div>
           <div class="classesBlock guest">
-            <img class="desktop" src="./resources/images/information-guest-lecture.jpg" alt="">
-            <img class="mobile" src="./resources/images/information-guest-lecture-mobile.jpg" alt="">
+            <img class="desktop" src="./resources/images/information-guest-lecture.jpg" alt="picture of guest Proffessor">
+            <img class="mobile" src="./resources/images/information-guest-lecture-mobile.jpg" alt="picture of guest Proffessor">
             <div class="classesInfo">
               <h3>Our guest lecture</h3>
               <p>Join keynote with Oliver Sack about music in medical treatment</p>
@@ -90,77 +90,77 @@
         </div>
       </div>
       <!--Third Container starts Here -->
-      <div class="third container">
+      <div class="third container" role="main">
         <div class="startLearning container">
           <h2>Start learning</h2>
         </div>
         <div class="learning container">
           <div class="learningBlock desktop">
-            <img src="./resources/images/course-software.jpg" alt="">
-            <div class="learningInfo">
+            <img src="./resources/images/course-software.jpg" alt="picture associated with the course described below">
+            <div class="learningInfo" aria-label="information about the Academy courses with a brief description">
               <h3>Software engineering</h3>
               <p>COURSES</p>
               <p>Web Developement, Mobile Developement, iOT, APIs</p>
             </div>
           </div>
-          <div class="learningBlock mobile">
+          <div class="learningBlock mobile" aria-label="titles of courses in the academy">
             <h3>Software engineering</h3>
           </div>
           <div class="learningBlock desktop">
-            <img src="./resources/images/course-computer-art.jpg" alt="">
-            <div class="learningInfo">
+            <img src="./resources/images/course-computer-art.jpg" alt="picture associated with the course described below">
+            <div class="learningInfo" aria-label="information about the Academy courses with a brief description">
               <h3>Computer art</h3>
               <p>COURSES</p>
               <p>Imaging & Design, Web Design, Motion Graphics & Visual effects</p>
             </div>
           </div>
-          <div class="learningBlock mobile">
+          <div class="learningBlock mobile" aria-label="titles of courses in the academy">
             <h3>Computer art</h3>
           </div>
           <div class="learningBlock desktop">
-            <img src="./resources/images/course-design.jpg" alt="">
-            <div class="learningInfo">
+            <img src="./resources/images/course-design.jpg" alt="picture associated with the course described below">
+            <div class="learningInfo" aria-label="information about the Academy courses with a brief description">
               <h3>Design</h3>
               <p>COURSES</p>
               <p>User expirience design, User Reserch, Visual Design</p>
             </div>
           </div>
-          <div class="learningBlock mobile">
+          <div class="learningBlock mobile" aria-label="titles of courses in the academy">
             <h3>Design</h3>
           </div>
         </div>
         <div class="learning container">
           <div class="learningBlock desktop">
-            <img src="./resources/images/course-data.jpg" alt="">
-            <div class="learningInfo">
+            <img src="./resources/images/course-data.jpg" alt="picture associated with the course described below">
+            <div class="learningInfo" aria-label="information about the Academy courses with a brief description">
               <h3>Data</h3>
               <p>COURSES</p>
               <p>Data science, Big Data, SQL, Data Visualisation</p>
             </div>
           </div>
-          <div class="learningBlock mobile">
+          <div class="learningBlock mobile" aria-label="titles of courses in the academy">
             <h3>Data</h3>
           </div>
           <div class="learningBlock desktop">
-            <img src="./resources/images/course-business.jpg" alt="">
-            <div class="learningInfo">
+            <img src="./resources/images/course-business.jpg" alt="picture associated with the course described below">
+            <div class="learningInfo" aria-label="information about the Academy courses with a brief description">
               <h3>Business</h3>
               <p>COURSES</p>
               <p>Web Developement, Mobile Developement, iOT, APIs</p>
             </div>
           </div>
-          <div class="learningBlock mobile">
+          <div class="learningBlock mobile" aria-label="titles of courses in the academy">
             <h3>Business</h3>
           </div>
           <div class="learningBlock desktop">
-            <img src="./resources/images/course-marketing.jpg" alt="">
-            <div class="learningInfo">
+            <img src="./resources/images/course-marketing.jpg" alt="picture associated with the course described below">
+            <div class="learningInfo" aria-label="information about the Academy courses with a brief description">
               <h3>Marketing</h3>
               <p>COURSES</p>
               <p>Web Developement, Mobile Developement, iOT, APIs</p>
             </div>
           </div>
-          <div class="learningBlock mobile">
+          <div class="learningBlock mobile" aria-label="titles of courses in the academy">
             <h3>Marketing</h3>
           </div>
         </div>
@@ -169,12 +169,12 @@
         <h2>Thesis exhibit</h2>
       </div>
       <!--Forth container starts here -->
-      <div class="forth container">
+      <div class="forth container" role="complementary">
         <div class="sixtyPercentBlock withVideo">
           <video autoplay muted loop>
             <source src="./resources/videos/thesis.mp4" type="video/mp4">
           </video>
-          <div class="cleverness underVideo desktop">
+          <div class="cleverness underVideo desktop" aria-label="cleverness">
             <h3>Reimagine urban</h2>
             <p>"Curabitur vitae libero in ipsum porttitor consequat.
               Aliquam et commodo lectus, nec consequat neque.Sed non accumsan urna.
